Lightened gray BG

--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -7322,17 +7322,17 @@ body > footer [role="grid"] > [role="gridcell"] > *:first-child {
 /* line 18, styleguide/scss/styleguide.scss */
 html, body {
   color: #000000;
-  background-color: #dfdfdf;
+  background-color: #f5f5f5;
 }
 
 /* line 74, styleguide/scss/core/_core-color.scss */
 html a:not([role="button"]), body a:not([role="button"]) {
-  color: #2b303a;
+  color: #1f8dd6;
 }
 
 /* line 79, styleguide/scss/core/_core-color.scss */
 html h1, html h2, html h3, html h4, html h5, html h6, body h1, body h2, body h3, body h4, body h5, body h6 {
-  color: #2b303a;
+  color: #757575;
 }
 
 /* line 28, styleguide/scss/styleguide.scss */
