--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -189,6 +189,15 @@ form, [role="form"] {
                 }
             }
 
+            &[date] {
+
+                font-size: 0;
+
+                & > * {
+                    font-size: initial;
+                }
+            }
+
             &[currency] {
 
                 font-size: 0;
@@ -199,12 +208,44 @@ form, [role="form"] {
 
                 span {
                     display: inline-block;
-                    width: 1rem;
+                    max-width: 1rem;
+                    margin-right: 0.5rem;
+
+                    &::after {
+                        content: '$';
+                    }
                 }
 
                 input {
 
-                    width: calc(100% - 1rem);
+                    width: calc(100% - 1.5rem);
+                }
+            }
+
+            &[percentage] {
+
+                font-size: 0;
+                text-align: right;
+
+                & > * {
+                    font-size: initial;
+                }
+
+                span {
+                    display: inline-block;
+                    max-width: 1rem;
+                    margin-left: 0.5rem;
+                    text-align: left;
+
+                    &::after {
+                        content: '%';
+                    }
+                }
+
+                input {
+
+                    width: calc(100% - 1.5rem);
+                    direction: rtl;
                 }
             }
         }
@@ -214,7 +255,7 @@ form, [role="form"] {
             background-image: url("../images/magnifying-glass.png");
             background-repeat: no-repeat;
             background-position: right 0.75rem center;
-            background-size: 1.15rem;
+            background-size: 1rem;
 
             padding-right: 2.75rem;
 
