Form styling refactored

--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -76,3 +76,9 @@ $tablet-landscape-vertical-gutter: 2.25rem;
 $notebook-vertical-gutter: 2.25rem;
 $desktop-vertical-gutter: 2.25rem;
 $elastic-vertical-gutter: 2.25rem;
+
+/* FORMS
+Sizes for various form elements, like fieldset row spacing.
+*/
+$fieldset-row-spacing: 1.25rem;
+
