Renamed data-columns to sf-columns, grid example content

--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -51,18 +51,18 @@ Use percentages or rems.
 */
 $grid-gutters: (
 
-    one-whole: 5%, // data-columns="1"
-    one-half: 7%, // data-columns="2"
-    one-third: 3%, // data-columns="3"
-    one-quarter: 3%, // data-columns="4"
-    one-fifth: 3%, // data-columns="5"
-    one-sixth: 3%, // data-columns="6"
-    one-seventh: 3%, // data-columns="7"
-    one-eighth: 3%, // data-columns="8"
-    one-ninth: 3%, // data-columns="9"
-    one-tenth: 3%, // data-columns="10"
-    one-eleventh: 3%, // data-columns="11"
-    one-twelfth: 3% // data-columns="12"
+    one-whole: 0%, // sf-columns="1"
+    one-half: 5%, // sf-columns="2"
+    one-third: 3%, // sf-columns="3"
+    one-quarter: 3%, // sf-columns="4"
+    one-fifth: 3%, // sf-columns="5"
+    one-sixth: 3%, // sf-columns="6"
+    one-seventh: 3%, // sf-columns="7"
+    one-eighth: 3%, // sf-columns="8"
+    one-ninth: 3%, // sf-columns="9"
+    one-tenth: 3%, // sf-columns="10"
+    one-eleventh: 3%, // sf-columns="11"
+    one-twelfth: 3% // sf-columns="12"
 );
 
 /* VERTICAL GUTTERS
