--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -79,7 +79,7 @@ blockquote {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 2.25rem;
-    margin-top: 1.75rem;
+    margin-top: 2.5rem;
     padding-left: 1.3344rem;
     padding-right: 1.3344rem;
     font-size: 1.2rem;
@@ -87,10 +87,10 @@ blockquote {
 
     @include sf-media($from: tablet-portrait) {
     
-        margin-left: 1.5rem;
-        margin-right: 0;
-        margin-bottom: 2rem;
-        margin-top: 1.5rem;
+        margin-left: 5.5rem;
+        margin-right: 4.5rem;
+        margin-bottom: 3rem;
+        margin-top: 3rem;
         padding-left: 1.5rem;
         padding-right: 4.0rem;
     }
