--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -25,7 +25,7 @@ body {
     & > main {
 
         // Primary wrapped containers with an elastic max-width
-        > section[role="region"][sf-unit] {
+        > [sf-unit] {
 
             @include sf-set-color-scheme(default);
 
@@ -34,19 +34,9 @@ body {
             @include set-vertical-unit-padding();
             @include set-horizontal-unit-padding();
 
-            &:nth-of-type(1) {
-
-                padding-bottom: 0;
-            }
-
-            &:not(:nth-of-type(1)):not(:nth-of-type(2)) {
+            &:not(:nth-of-type(1)) {
 
                 border-top: solid 1px sf-get-color(graylighter);
-            }
-
-            & > h2 {
-
-                margin-top: 0;
             }
 
             // Back to top links
