--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -31,86 +31,60 @@ body {
 
             [role="grid"] {
 
-                margin-bottom: 0;
-
                 > [role="gridcell"] {
-
-                    margin-bottom: 0;
 
                     &:nth-child(1) {
 
-                        @include sf-set-width(
-                            $width: 15%,
-                            $hard-gutter: 1%
-                        );
+                        width: 15%;
+                        margin-right: 1%;
 
-                        @include sf-set-width(
-                            $from: tablet-portrait,
-                            $width: 5%,
-                            $hard-gutter: 1%
-                        );
+                        @include sf-media($from: tablet-portrait) {
+                         
+                            width: 5%;
+                        }
                     }
 
                     &:nth-child(2) {
 
-                        @include sf-set-width(
-                            $width: 84%
-                        );
+                        width: 84%;
 
-                        @include sf-set-width(
-                            $from: tablet-portrait,
-                            $width: 64%
-                        );
+                        @include sf-media($from: tablet-portrait) {
+
+                            width: 64%;
+                        }
 
                         h1 {
 
                             margin: 0;
                             padding: 0;
-                            text-transform: uppercase;
-                            text-align: right;
+                            line-height: 0.83;
                             font-weight: 400;
                             color: sf-get-color(slate);
                             font-family: $font-logo;
-
-                            justify-content: flex-end;
-
+                            text-align: right;
                             font-size: 3.65rem;
 
                             @include sf-media($from: tablet-portrait) {
 
                                 font-size: 4.5rem;
-                                justify-content: flex-start;
+                                line-height: 0.75;
+                                text-align: left;
                             }
                         }
                     }
 
                     &:nth-child(3) {
 
+                        width: 100%;
                         margin-top: 0.5rem;
                         font-size: 1.25rem;
-
-                        @include sf-set-width(
-                            $width: 100%
-                        );
-
-                        @include sf-set-width(
-                            $from: tablet-portrait,
-                            $width: 30%
-                        );
-
-                        div {
-
-                            align-items: flex-end;
-                        }
+                        text-align: center;
 
                         @include sf-media($from: tablet-portrait) {
 
+                            width: 30%;
                             margin-top: 0;
-
-                            div {
-
-                                justify-content: flex-end;
-                            }
+                            text-align: right;
                         }
                     }
                 }
