--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -7099,90 +7099,66 @@ body > header #logo {
   }
 }
 
-/* line 32, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] {
-  margin-bottom: 0;
-}
-
 /* line 36, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"] {
-  margin-bottom: 0;
-}
-
-/* line 40, styleguide/scss/custom/_layout-header.scss */
 body > header #logo [role="grid"] > [role="gridcell"]:nth-child(1) {
   width: 15%;
   margin-right: 1%;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 40, styleguide/scss/custom/_layout-header.scss */
+  /* line 36, styleguide/scss/custom/_layout-header.scss */
   body > header #logo [role="grid"] > [role="gridcell"]:nth-child(1) {
     width: 5%;
-    margin-right: 1%;
   }
 }
 
-/* line 54, styleguide/scss/custom/_layout-header.scss */
+/* line 47, styleguide/scss/custom/_layout-header.scss */
 body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) {
   width: 84%;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 54, styleguide/scss/custom/_layout-header.scss */
+  /* line 47, styleguide/scss/custom/_layout-header.scss */
   body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) {
     width: 64%;
   }
 }
 
-/* line 65, styleguide/scss/custom/_layout-header.scss */
+/* line 56, styleguide/scss/custom/_layout-header.scss */
 body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
   margin: 0;
   padding: 0;
-  text-transform: uppercase;
-  text-align: right;
+  line-height: 0.83;
   font-weight: 400;
   color: #2b303a;
   font-family: "Quicksand", -apple-system, Helvetica, Calibri, Arial, sans-serif;
-  justify-content: flex-end;
+  text-align: right;
   font-size: 3.65rem;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 65, styleguide/scss/custom/_layout-header.scss */
+  /* line 56, styleguide/scss/custom/_layout-header.scss */
   body > header #logo [role="grid"] > [role="gridcell"]:nth-child(2) h1 {
     font-size: 4.5rem;
-    justify-content: flex-start;
+    line-height: 0.75;
+    text-align: left;
   }
 }
 
-/* line 87, styleguide/scss/custom/_layout-header.scss */
+/* line 76, styleguide/scss/custom/_layout-header.scss */
 body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) {
+  width: 100%;
   margin-top: 0.5rem;
   font-size: 1.25rem;
-  width: 100%;
+  text-align: center;
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 87, styleguide/scss/custom/_layout-header.scss */
+  /* line 76, styleguide/scss/custom/_layout-header.scss */
   body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) {
     width: 30%;
-  }
-}
-
-/* line 101, styleguide/scss/custom/_layout-header.scss */
-body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) div {
-  align-items: flex-end;
-}
-
-@media screen and (min-width: 33.75em) {
-  /* line 87, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) {
     margin-top: 0;
-  }
-  /* line 110, styleguide/scss/custom/_layout-header.scss */
-  body > header #logo [role="grid"] > [role="gridcell"]:nth-child(3) div {
-    justify-content: flex-end;
+    text-align: right;
   }
 }
 
