--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -24,6 +24,11 @@ body {
     
     & > main {
 
+        > section[separator] {
+
+            @include set-bottom-unit-padding();
+        }
+
         // Primary wrapped containers with an elastic max-width
         > [sf-unit] {
 
@@ -34,9 +39,9 @@ body {
             @include set-vertical-unit-padding();
             @include set-horizontal-unit-padding();
 
-            &:not(:nth-of-type(1)) {
+            & + [sf-unit] {
 
-                border-top: solid 1px sf-get-color(graylighter);
+                border-top: solid 1px sf-get-color(graylight);
             }
 
             // Back to top links
