--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -136,6 +136,11 @@ small {
         padding: 0.1rem 0.5rem;
         border-radius: 0.15rem;
         font-size: 0.8rem;
+
+        &[feature] {
+
+            font-size: 1rem;
+        }
     }
 }
 
