--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1707,7 +1707,13 @@ small {
   color: #757575;
 }
 
-/* line 142, styleguide/scss/core/_core-typography.scss */
+/* line 140, styleguide/scss/core/_core-typography.scss */
+:not(pre) > code[feature],
+:not(pre) > code[class*="language-"][feature] {
+  font-size: 1rem;
+}
+
+/* line 147, styleguide/scss/core/_core-typography.scss */
 pre {
   display: block;
   margin-top: 0.8896rem;
@@ -1730,19 +1736,19 @@ pre h1, pre h2, pre h3, pre h4, pre h5, pre h6 {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 142, styleguide/scss/core/_core-typography.scss */
+  /* line 147, styleguide/scss/core/_core-typography.scss */
   pre {
     margin-top: 1.34rem;
     margin-bottom: 1.34rem;
   }
 }
 
-/* line 160, styleguide/scss/core/_core-typography.scss */
+/* line 165, styleguide/scss/core/_core-typography.scss */
 pre::-webkit-scrollbar {
   display: none;
 }
 
-/* line 167, styleguide/scss/core/_core-typography.scss */
+/* line 172, styleguide/scss/core/_core-typography.scss */
 pre[aria-label] {
   display: inline-block;
   overflow: visible;
@@ -1752,13 +1758,13 @@ pre[aria-label] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 167, styleguide/scss/core/_core-typography.scss */
+  /* line 172, styleguide/scss/core/_core-typography.scss */
   pre[aria-label] {
     padding: 0.0336rem 0.5025rem;
   }
 }
 
-/* line 181, styleguide/scss/core/_core-typography.scss */
+/* line 186, styleguide/scss/core/_core-typography.scss */
 pre:not([class*="language-"]) {
   margin-top: 0.8896rem;
   margin-bottom: 0.8896rem;
@@ -1766,7 +1772,7 @@ pre:not([class*="language-"]) {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 181, styleguide/scss/core/_core-typography.scss */
+  /* line 186, styleguide/scss/core/_core-typography.scss */
   pre:not([class*="language-"]) {
     margin-top: 1.34rem;
     margin-bottom: 1.34rem;
@@ -1774,7 +1780,7 @@ pre:not([class*="language-"]) {
   }
 }
 
-/* line 196, styleguide/scss/core/_core-typography.scss */
+/* line 201, styleguide/scss/core/_core-typography.scss */
 pre, pre[class*="language-"] {
   border-radius: 0;
   margin-top: 1rem;
@@ -1787,7 +1793,7 @@ pre, pre[class*="language-"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 196, styleguide/scss/core/_core-typography.scss */
+  /* line 201, styleguide/scss/core/_core-typography.scss */
   pre, pre[class*="language-"] {
     border-radius: 0.25rem;
     margin: 0;
@@ -1797,26 +1803,26 @@ pre, pre[class*="language-"] {
   }
 }
 
-/* line 218, styleguide/scss/core/_core-typography.scss */
+/* line 223, styleguide/scss/core/_core-typography.scss */
 pre > code, pre[class*="language-"] > code {
   display: block;
   font-size: 1rem;
   line-height: 1.4;
 }
 
-/* line 225, styleguide/scss/core/_core-typography.scss */
+/* line 230, styleguide/scss/core/_core-typography.scss */
 pre:last-child, pre[class*="language-"]:last-child {
   margin-bottom: 0;
 }
 
-/* line 231, styleguide/scss/core/_core-typography.scss */
+/* line 236, styleguide/scss/core/_core-typography.scss */
 code[class*="language-"], pre[class*="language-"] {
   text-shadow: none !important;
   overflow: scroll;
   -ms-overflow-style: none;
 }
 
-/* line 238, styleguide/scss/core/_core-typography.scss */
+/* line 243, styleguide/scss/core/_core-typography.scss */
 hr {
   margin: 0;
   margin-bottom: 2rem;
@@ -1829,7 +1835,7 @@ hr {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 238, styleguide/scss/core/_core-typography.scss */
+  /* line 243, styleguide/scss/core/_core-typography.scss */
   hr {
     height: 0.15rem;
     min-height: 0.15rem;
