--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -86,6 +86,10 @@ body {
                             margin-top: 0;
                             text-align: right;
                         }
+
+                        h3 {
+                            margin-bottom: 0.5rem;
+                        }
                     }
                 }
             }
