--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -59,7 +59,6 @@ body {
                             padding: 0;
                             line-height: 0.83;
                             font-weight: 400;
-                            color: sf-get-color(slate);
                             font-family: $font-logo;
                             text-align: right;
                             font-size: 3.65rem;
@@ -69,6 +68,12 @@ body {
                                 font-size: 4.5rem;
                                 line-height: 0.75;
                                 text-align: left;
+                            }
+
+                            a {
+
+                                color: sf-get-color(slate);
+                                text-decoration: none;
                             }
                         }
                     }
@@ -87,7 +92,13 @@ body {
                             text-align: right;
                         }
 
+                        h3, h4 {
+
+                            color: sf-get-color(slate);
+                        }
+
                         h3 {
+
                             margin-bottom: 0.5rem;
                         }
                     }
