--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -182,10 +182,13 @@ body {
                             section {
 
                                 justify-content: flex-start;
+                            }
+                        }
 
-                                h3, p {
-                                    text-align: left;
-                                }
+                        &#fully-centered-grid {
+
+                            h3, p {
+                                text-align: center;
                             }
                         }
 
