--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -2,6 +2,20 @@ body {
     
     & > main {
 
+        #overview-grid-sample {
+
+            margin-bottom: 1.5rem;
+
+            [role="gridcell"] {
+
+                @include sf-set-width (
+                    $upto: tablet-portrait,
+                    $width: one-quarter,
+                    $gutter: map-get($grid-gutters, one-quarter)
+                );
+            }
+        }
+
         // Primary wrapped containers with an elastic max-width
         > [sf-unit] {
 
@@ -29,192 +43,192 @@ body {
                             @include sf-hide($from: tablet-portrait);
                         }
                     }
+                }
+            }
+        }
 
-                    section[role="grid"] {
+        section[role="grid"] {
                         
-                        // Grid cell defaults
-                        [role="gridcell"] {
+            // Grid cell defaults
+            [role="gridcell"] {
 
-                            p {
-                            
-                                padding-top: 0.6672rem;
-                                line-height: 1.3;
+                p {
+                
+                    padding-top: 0.6672rem;
+                    line-height: 1.3;
 
-                                @include sf-media($from: tablet-portrait) {
+                    @include sf-media($from: tablet-portrait) {
 
-                                    padding-top: 0.67rem;
-                                }
-                            }
+                        padding-top: 0.67rem;
+                    }
+                }
 
-                            h3 {
-                                
-                                margin-top: 0;
-                            }
-                                
-                            &:nth-child(1) {
+                h3 {
+                    
+                    margin-top: 0;
+                }
+                    
+                &:nth-child(1) {
 
-                                @include sf-set-color-scheme (primary);
-                            }
+                    @include sf-set-color-scheme (primary);
+                }
 
-                            &:nth-child(2) {
+                &:nth-child(2) {
 
-                                @include sf-set-color-scheme (secondary);
-                            }
+                    @include sf-set-color-scheme (secondary);
+                }
 
-                            &:nth-child(3) {
+                &:nth-child(3) {
 
-                                @include sf-set-color-scheme (tertiary);
-                            }
+                    @include sf-set-color-scheme (tertiary);
+                }
 
-                            &:nth-child(4) {
+                &:nth-child(4) {
 
-                                @include sf-set-color-scheme (quaternary);
-                            }
+                    @include sf-set-color-scheme (quaternary);
+                }
 
-                            &:nth-child(5) {
+                &:nth-child(5) {
 
-                                @include sf-set-color-scheme (gold);
-                            }
+                    @include sf-set-color-scheme (gold);
+                }
 
-                            &:nth-child(6) {
+                &:nth-child(6) {
 
-                                @include sf-set-color-scheme (green);
-                            }
+                    @include sf-set-color-scheme (green);
+                }
 
-                            &:nth-child(7) {
+                &:nth-child(7) {
 
-                                @include sf-set-color-scheme (orange);
-                            }
+                    @include sf-set-color-scheme (orange);
+                }
 
-                            &:nth-child(8) {
+                &:nth-child(8) {
 
-                                @include sf-set-color-scheme (red);
-                            }
+                    @include sf-set-color-scheme (red);
+                }
 
-                            > section {
+                > section {
 
-                                padding-top: 0;
-                                padding-bottom: 0;
+                    padding-top: 0;
+                    padding-bottom: 0;
 
-                                > div {
+                    > div {
 
-                                    padding: 1.0008rem;
-                                    color: sf-get-color(white);
+                        padding: 1.0008rem;
+                        color: sf-get-color(white);
 
-                                    @include sf-media($from: tablet-portrait) {
+                        @include sf-media($from: tablet-portrait) {
 
-                                        padding: 1.34rem;
-                                    }
-
-                                    h3 {
-
-                                        color: sf-get-color(white);
-                                        font-size: 1.5568rem;
-                                        line-height: 1.5568rem;
-
-                                        padding-top: 0;
-                                        border-bottom: 0;
-                                        margin-bottom: 0;
-
-                                        @include sf-media($from: tablet-portrait) {
-
-                                            font-size: 1.675rem;
-                                            line-height: 1.675rem;
-                                        }
-                                    }
-                                }
-                            }
+                            padding: 1.34rem;
                         }
 
-                        &#gutterless-grid {
+                        h3 {
 
-                            > [role="gridcell"] {
+                            color: sf-get-color(white);
+                            font-size: 1.5568rem;
+                            line-height: 1.5568rem;
 
-                                @include sf-set-width (
-                                    $from: tablet-portrait,
-                                    $width: one-third
-                                );
+                            padding-top: 0;
+                            border-bottom: 0;
+                            margin-bottom: 0;
 
-                                &:nth-child(3), &:nth-child(4), &:nth-child(5) {
+                            @include sf-media($from: tablet-portrait) {
 
-                                    @include sf-set-width (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth
-                                    );
-                                }
+                                font-size: 1.675rem;
+                                line-height: 1.675rem;
                             }
                         }
+                    }
+                }
+            }
 
-                        &#push-grid {
+            &#gutterless-grid {
 
-                            > [role="gridcell"] {
+                > [role="gridcell"] {
 
-                                @include sf-set-width (
-                                    $from: tablet-portrait,
-                                    $width: one-third
-                                );
-                            }
-                        }
+                    @include sf-set-width (
+                        $from: tablet-portrait,
+                        $width: one-third
+                    );
 
-                        &#gutters-push-grid,
-                        &#push-grid {
+                    &:nth-child(3), &:nth-child(4), &:nth-child(5) {
 
-                            > [role="gridcell"] {
+                        @include sf-set-width (
+                            $from: tablet-portrait,
+                            $width: one-sixth
+                        );
+                    }
+                }
+            }
 
-                                &:nth-child(1) {
+            &#push-grid {
 
-                                    @include sf-push (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth);
-                                }
+                > [role="gridcell"] {
 
-                                &:nth-child(2) {
+                    @include sf-set-width (
+                        $from: tablet-portrait,
+                        $width: one-third
+                    );
+                }
+            }
 
-                                    @include sf-push (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth);
-                                }
-                            }
-                        }
+            &#gutters-push-grid,
+            &#push-grid {
 
-                        &#equal-heights-centered-grid {
+                > [role="gridcell"] {
 
-                            section {
+                    &:nth-child(1) {
 
-                                justify-content: flex-start;
-                            }
-                        }
+                        @include sf-push (
+                            $from: tablet-portrait,
+                            $width: one-sixth);
+                    }
 
-                        &#fully-centered-grid {
+                    &:nth-child(2) {
 
-                            h3, p {
-                                text-align: center;
-                            }
-                        }
+                        @include sf-push (
+                            $from: tablet-portrait,
+                            $width: one-sixth);
+                    }
+                }
+            }
 
-                        &#gutters-varied-grid {
+            &#equal-heights-centered-grid {
 
-                            > [role="gridcell"] {
+                section {
 
-                                &:nth-child(4) {
+                    justify-content: flex-start;
+                }
+            }
 
-                                    @include sf-set-width (
-                                        $from: tablet-portrait,
-                                        $width: one-half,
-                                        $gutter: map-get($grid-gutters, one-third)
-                                    );
-                                }
+            &#fully-centered-grid {
 
-                                &:nth-child(5), &:nth-child(6) {
+                h3, p {
+                    text-align: center;
+                }
+            }
 
-                                    @include sf-set-width (
-                                        $from: tablet-portrait,
-                                        $width: one-quarter,
-                                        $gutter: map-get($grid-gutters, one-third)
-                                    );
-                                }
-                            }
-                        }
+            &#gutters-varied-grid {
+
+                > [role="gridcell"] {
+
+                    &:nth-child(4) {
+
+                        @include sf-set-width (
+                            $from: tablet-portrait,
+                            $width: one-half,
+                            $gutter: map-get($grid-gutters, one-third)
+                        );
+                    }
+
+                    &:nth-child(5), &:nth-child(6) {
+
+                        @include sf-set-width (
+                            $from: tablet-portrait,
+                            $width: one-quarter,
+                            $gutter: map-get($grid-gutters, one-third)
+                        );
                     }
                 }
             }
