New checkbox style (sliding switch)

--- a/styleguide/scss/_manifest.scss
+++ b/styleguide/scss/_manifest.scss
@@ -18,6 +18,7 @@
 @import "core/core-flexbox-grid";
 
 // CORE ELEMENT PARTIALS; DO NOT EDIT
+@import "core/core-animation";
 @import "core/core-color";
 @import "core/core-buttons";
 @import "core/core-forms";
