Reworked form control markup pattern, radio/check styles

--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -58,3 +58,4 @@ $disabled-field-bg-color: #f5f5f5;
 
 // REQUIRED: Default line color
 $line-color: rgba(0, 0, 0, 0.15);
+$form-field-line-color: #ababab;
