--- a/styleguide/scss/_config-measurements.scss
+++ b/styleguide/scss/_config-measurements.scss
@@ -2,6 +2,14 @@
 // $CONFIG-MEASUREMENTS
 //-----------------------------------------------------------------------//
 
+
+// Line Widths:
+// Used by the style guide layout to define line thicknesses for borders, 
+// <hr> tags, etc. Use rem units
+$mobile-lw-1px:  0.07rem;
+$lw-1px:  0.08rem;
+
+
 /* OUTER UNIT MEASUREMENTS
 These are the outer block containers that you stack to create your UX.
 
