--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -2,7 +2,7 @@ body {
     
     & > main {
 
-        #overview-grid-sample {
+        #overview-sample-grid {
 
             margin-bottom: 1.5rem;
 
