Rorganized form fields in columns

--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -687,10 +687,13 @@ form, [role="form"] {
             &[sf-horizontal] {
 
                 margin-right: -2rem;
+                margin-bottom: -1rem;
 
                 li {
                     display: inline-block;
                     margin-right: 2rem;
+                    padding-top: 0;
+                    padding-bottom: 1rem;
                 }
             }
         }
